--- a/principal.html
+++ b/principal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="the best mother fucker of site.html"
+<link rel="stylesheet" type="text/css" href="principal.html"
 <body>
 <script src="script.js"><</script>
 </body>
