--- a/principal.html
+++ b/principal.html
@@ -7,63 +7,18 @@
 <nav class="menu">
 
 
-<!--nome da api ativa -->
-
-
-<button>post</button>
-<button>get</button>
-<button>update</button>
-<button>delete</button>
-<button>donate</button>
+<button>POST</button>
+<button>GET</button>
+<button>UPDATE</button>
+<button>DELETE</button>
+<button>CAFÉ?</button>
 <p>CITY</p><input type="text"name="email"><br>
 
 
 </ol> </nav>
 <li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-
-<!-- funcão tem opçoes (speed, direction, -->
+    
+<!-- funcão tem opçoes (speed, direction) -->
 <!-- -->
 <title> HTML PROCESS BUILDING </title>
 </marquee>
